crates/rv-lockfile/tests/snapshots/complex_lockfile_tests__invalid_indentation_strict_mode.snap
---
source: crates/rv-lockfile/tests/complex_lockfile_tests.rs
expression: result.unwrap_err()
---
InvalidIndentation {
    line: 5,
    expected: 2,
    found: 1,
    source_code: "",
    span: SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: 0,
    },
}
