crates/rv-lockfile/tests/snapshots/complex_lockfile_tests__malformed_gem_spec_strict_mode.snap
---
source: crates/rv-lockfile/tests/complex_lockfile_tests.rs
expression: result.unwrap_err()
---
InvalidSpecification {
    line: 5,
    spec: "invalid-gem-spec without version",
    source_code: "",
    span: SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: 0,
    },
}
